# rust-fs-ext4

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.sh  rust-toolchain.toml
.githooks/: check-deps-pinned.sh  pre-commit
docs/: IMPROVEMENT-PLAN.md  TEST-DISKS.md  ext4-full-write-support.md  extent-tree-depth2-design.md
examples/: capi_demo.rs  fsck_demo.rs
include/: ext4rs.h  fs_ext4.h
scripts/: cross-validate-lwext4.sh  vm-e2fsck.sh
src/: acl.rs  alloc.rs  bgd.rs  block_cache.rs  block_io.rs  capi.rs  casefold.rs  checksum.rs  dir.rs  ea_inode.rs  error.rs  extent.rs  extent_mut.rs  features.rs  file_io.rs  file_mut.rs  fs.rs  fs_core_bridge.rs  fsck.rs  hash.rs  htree.rs  htree_mut.rs  indirect.rs  indirect_mut.rs  inline_data.rs  inode.rs  jbd2.rs  journal.rs  journal_apply.rs  journal_writer.rs  lib.rs  mkfs.rs  path.rs  superblock.rs  transaction.rs  verify.rs  xattr.rs
test-disks/: _vm-builder.sh  build-ext4-feature-images.sh  build-test-disks.sh  ext4-acl.meta.txt  ext4-csum-seed.meta.txt  ext4-deep-extents.meta.txt  ext4-htree.meta.txt  ext4-inline.meta.txt  ext4-largedir.meta.txt  ext4-no-csum.meta.txt  ext4-xattr.meta.txt  gen-test-disks.sh
tests/: acl_basic.rs  all_images_rw_smoke.rs  alloc_counter_consistency.rs  block_cache_integration.rs  capi_acl_xattrs.rs  capi_basic.rs  capi_callback_rw.rs  capi_chmod_chown.rs  capi_concurrency.rs  capi_create.rs  capi_create_mkdir_rmdir_errno.rs  capi_csum_variants.rs  capi_deep_extents.rs  capi_errno.rs  capi_htree.rs  capi_inline_data.rs  capi_input_validation.rs  capi_largedir.rs  (+84 more)
(+14 files in other folders)
